<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flexiv_moveit_examples</name>
  <version>0.8.0</version>
  <description>MoveIt! Examples for Flexiv robots</description>
  <maintainer email="munseng.phoon@flexiv.com">Mun Seng Phoon</maintainer>
  <license>Apache License 2.0</license>
  <author email="munseng.phoon@flexiv.com">Mun Seng Phoon</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_msgs</depend>
  <depend>moveit_common</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>

  <exec_depend>flexiv_description</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
